--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@fullcalendar/core": "^5.0.0",
+    "angular-animations": "0.0.10",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
