--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@fullcalendar/core": "^5.0.0",
     "angular-animations": "0.0.10",
     "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
+    "express-http-proxy": "^1.6.0",
     "font-awesome": "^4.7.0",
+    "port": "^0.8.1",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.0",
     "quill": "^1.3.7",
