--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.1.11",
     "@fullcalendar/core": "^5.0.0",
     "angular-animations": "0.0.10",
+    "auth0-js": "^9.13.2",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "express-http-proxy": "^1.6.0",
