--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,29 +20,29 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
-    "@fullcalendar/core": "^5.0.0",
+    "@fullcalendar/core": "^5.1.0",
     "angular-animations": "0.0.10",
     "auth0": "^2.27.0",
-    "auth0-js": "^9.13.2",
+    "auth0-js": "^9.13.3",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "express-http-proxy": "^1.6.0",
     "font-awesome": "^4.7.0",
     "port": "^0.8.1",
     "primeicons": "^4.0.0",
-    "primeng": "^9.1.0",
+    "primeng": "^9.1.2",
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.9",
-    "@angular/cli": "~9.1.9",
+    "@angular-devkit/build-angular": "^0.901.10",
+    "@angular/cli": "^9.1.10",
     "@angular/compiler-cli": "~9.1.11",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
