--- a/Dockerfile.angular
+++ b/Dockerfile.angular
@@ -1,26 +1,42 @@
     # Create image based on the official Node 6 image from dockerhub
-    FROM node:12
+    # FROM node:12
 
     # Create a directory where our app will be placed
     # RUN mkdir -p /usr/src/app
 
     # Change directory so that our commands run inside this new directory.  Or you can specigy COPY package.json ./  # because the working directory
-    WORKDIR /app
+    # WORKDIR /app
 
     # Copy dependency definitions
-    COPY package.json ./
+    # COPY package.json ./
 
     # Install dependecies
-    RUN npm install
+    # RUN npm install
 
     # Get all the code needed to run the app
-    COPY . .
+    # COPY . .
 
     # Expose the port the app runs in
-    EXPOSE 4200
+    # EXPOSE 4200
 
     # Serve the app
     # CMD ["npm", "start"]
 
-    CMD npm run start
+    # CMD npm run start
+
+
+    ### STAGE 1: Build ###
+FROM node:12.7-alpine AS build
+WORKDIR /usr/src/app
+COPY package.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
+### STAGE 2: Run ###
+FROM nginx:1.17.1-alpine
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /usr/src/app/dist/bike-ui /usr/share/nginx/html
+EXPOSE 80
+
 
